--- a/templates/header.html
+++ b/templates/header.html
@@ -12,11 +12,11 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="btn-group dropstart">
-  <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+    <div class="btn-group">
+  <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
     Dropstart
   </button>
-  <ul class="dropdown-menu">
+  <ul class="dropdown-menu dropdown-menu-end">
     <li><a class="dropdown-item" href="{{ url_for('text_to_csv') }}">Text To CSV</a></li>
     <li><a class="dropdown-item" href="{{ url_for('pdf_to_excel') }}">PDF To Excel</a></li>
     <li><a class="dropdown-item" href="{{ url_for('po_automator') }}">PO Automator</a></li>
