--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'header.html' %}
-<body>
+{% block content %}
 <div class="container">
   <div class="row">
     <div class="col">
@@ -13,8 +13,4 @@
     </div>
   </div>
 </div>
-
-
-
-</body>
-</html>
+{% endblock %}
