Added css file and did many styling on index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,26 @@
 {% extends 'header.html' %}
 {% block content %}
-<div class="container">
+<div class="container-fluid" id="main-container">
   <div class="row">
-    <div class="col">
-      <a href="{{ url_for('text_to_csv') }}">text to csv</a>
+    <div class="col-4 text-center">
+      <i class="fa fa-file-csv fa-4x"></i>
+      <a href="{{ url_for('text_to_csv') }}">
+        <h3>Text To CSV</h3>
+      </a>
     </div>
-    <div class="col">
-      <a href="{{ url_for('pdf_to_excel') }}">PDF to Excel</a>
+    <div class="col-4 text-center">
+      <i class="fa fa-file-excel fa-4x"></i>
+      <a href="{{ url_for('pdf_to_excel') }}">
+        <h3> PDF To Excel </h3>
+        <p> Converting Tables in PDF files to excel sheets </p>
+      </a>
     </div>
-    <div class="col">
-      <a href="{{ url_for('po_automator') }}">PO_automator</a>
+    <div class="col-4 text-center">
+      <i class="fa fa-cart-plus fa-4x"></i>
+      <a href="{{ url_for('po_automator') }}">
+        <h3>PO Automator</h3>
+        <p>Converts Excel sheets to online form inorder to create an excel sheet purchasing order</p>
+      </a>
     </div>
   </div>
 </div>
