--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+<div class="container-fluid">
+  <div class="row ms-auto">
+    <div class="col text-end" >
+      <p class="footer-message">Blue Cell Trading LTD - Made with <i class="fa fa-heart"></i></p>
+    </div>
+  </div>
+</div>
+</body>
+</html>
 </body>
 </html>
