--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-{% block head %}
     <meta charset="UTF-8">
     <title>Blue Cell Pro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -10,12 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap" rel="stylesheet">
-  {% endblock %}
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="{{url_for('home')}}">
         <h3>Blue Cell Pro</h3>
     </a>
     <div class="btn-group">
@@ -30,14 +28,4 @@
 </div>
   </div>
 </nav>
-<div id="content">{% block content %}{% endblock %}</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-<div class="container-fluid">
-  <div class="row ms-auto">
-    <div class="col text-end">
-      <p>Blue Cell Trading LTD - Made with <i class="fa fa-heart"></i></p>
-    </div>
-  </div>
-</div>
-</body>
-</html>
+
