--- a/templates/text to csv page.html
+++ b/templates/text to csv page.html
@@ -1,18 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Text to CSV converter</title>
-</head>
-
-<body>
-    <div>
-    <form method="POST" enctype="multipart/form-data">
-        {{ form.hidden_tag()}}
-        {{ form.file_field()}}
-        {{ form.submit()}}
+{% block content %}
+{% include "header.html" %}
+<div class="upload-container">
+    <form class="row justify-content-md-center">
+        {{ form.hidden_tag() }}
+        <div class="col-auto">
+            {{ form.file_field.label }}
+        </div>
+        <div class="col-auto">
+            {{ form.file_field(class_="form-control") }}
+        </div>
+        <div class="col-auto">
+            {{ form.submit(class_="btn btn-primary mb-2") }}
+        </div>
     </form>
-    </div>
+</div>
     {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
     <ul class=flashes>
@@ -22,6 +23,6 @@
     </ul>
   {% endif %}
 {% endwith %}
-<A HREF="{{url_for('home')}}">home</A>
-</body>
-</html>
+
+{% include "footer.html" %}
+{% endblock %}
