created upload_excel_file.html and modified po_automator_page.html

--- a/templates/header.html
+++ b/templates/header.html
@@ -23,7 +23,7 @@
   <ul class="dropdown-menu dropdown-menu-end">
     <li><a class="dropdown-item" href="{{ url_for('text_to_csv') }}">Text To CSV</a></li>
     <li><a class="dropdown-item" href="{{ url_for('pdf_to_excel') }}">PDF To Excel</a></li>
-    <li><a class="dropdown-item" href="{{ url_for('po_automator') }}">PO Automator</a></li>
+    <li><a class="dropdown-item" href="{{ url_for('upload_excel_file') }}">PO Automator</a></li>
   </ul>
 </div>
   </div>
