--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="col-4 text-center">
       <i class="fa fa-cart-plus fa-4x"></i>
-      <a href="{{ url_for('po_automator') }}">
+      <a href="{{ url_for('upload_excel_file') }}">
         <h3>PO Automator</h3>
         <p>Converts Excel sheets to online form inorder to create an excel sheet purchasing order</p>
       </a>
