--- a/templates/po_automator_page.html
+++ b/templates/po_automator_page.html
@@ -5,13 +5,11 @@
     {% for num in range(0,len) %}
 
         {{ form.phones[num].hidden_tag() }}
-        <P>
-            {{ lst[num][0] }} {{ lst[num][1] }} {{form.phones[num]}}
-        </P>
+        <div class="col-lg-4 col-sm-auto my-3 px-5" >
+            <h5>{{ lst[num][0] }} {{ lst[num][1] }}</h5> {{form.phones[num]}}
+        </div>
     {% endfor %}
-    <div class="col-auto">
-    {{form.submit}}
-    </div>
+    {{form.submit(class_="btn btn-primary btn-lg btn-block")}}
 </form>
 {% include "footer.html" %}
 {% endblock %}
