fixed css bug on po_automator_page.html

--- a/static/styles.css
+++ b/static/styles.css
@@ -16,6 +16,11 @@ a {
      margin-bottom: 50px;
 }
 
+#form-container {
+    background-color: #051367;
+    border:1px solid #EFFFFD;
+}
+
 .col-4 {
         border-right:1px solid #EFFFFD;
 }
