--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,6 @@
 {% block content %}
 {% include "header.html" %}
-<div class="registartion message">
+<div class="registartion-message">
     <div class="row justify-content-md-center">
         <div class="col-auto">
             <h1> Please fill out the information below to register a user.</h1>
@@ -12,11 +12,13 @@
     {{ register_form.hidden_tag() }}
     <div class="row justify-content-md-center py-0">
         <div class="form-group col-auto mt-5">
+            {{ register_form.user_name_field.label }}
     {{ register_form.user_name_field(class_="form-control") }}
         </div>
         </div>
     <div class="row justify-content-md-center py-0">
         <div class="form-group col-auto my-1">
+            {{ register_form.password_field.label}}
     {{ register_form.password_field(class_="form-control") }}
         </div>
                </div>
