--- a/templates/index.html
+++ b/templates/index.html
@@ -24,5 +24,6 @@
     </div>
   </div>
 </div>
+<a href="{{ url_for('form_automator') }}">  Web form automator </a>
 {% include "footer.html" %}
 {% endblock %}
