--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,14 @@
         <p>Converts Excel sheets to online form inorder to create an excel sheet purchasing order</p>
       </a>
     </div>
-  </div>
+      <div class="col-4 text-center border-end">
+<a href="{{ url_for('form_automator') }}">
+  <i class="fa fa-robot fa-4x"></i></i>
+  <h3>Web form automator </h3>
+  <p> reads an Excel file and automatically fills an internet form </p>
+</a>
+      </div>
+    </div>
 </div>
-<a href="{{ url_for('form_automator') }}">  Web form automator </a>
 {% include "footer.html" %}
 {% endblock %}
