--- a/templates/index.html
+++ b/templates/index.html
@@ -2,27 +2,29 @@
 {% include "header.html" %}
 <div class="container my-3 mx-auto" id="main-container">
   <div class="row">
-    <div class="col-4 text-center border-end">
-      <i class="fa fa-file-csv fa-4x"></i>
+    <div class="col-4 text-center border">
       <a href="{{ url_for('text_to_csv') }}">
+      <i class="fa fa-file-csv fa-4x"></i>
         <h3>Text To CSV</h3>
+        <p> Converts a text file to a csv file </p>
       </a>
     </div>
-    <div class="col-4 text-center border-end">
-      <i class="fa fa-file-excel fa-4x"></i>
+    <div class="col-4 text-center border">
       <a href="{{ url_for('pdf_to_excel') }}">
+        <i class="fa fa-file-excel fa-4x"></i>
+
         <h3> PDF To Excel </h3>
         <p> Converting Tables in PDF files to excel sheets </p>
       </a>
     </div>
-    <div class="col-4 text-center border-end">
-      <i class="fa fa-cart-plus fa-4x"></i>
+    <div class="col-4 text-center border">
       <a href="{{ url_for('upload_excel_file') }}">
+        <i class="fa fa-cart-plus fa-4x"></i>
         <h3>PO Automator</h3>
         <p>Converts Excel sheets to online form inorder to create an excel sheet purchasing order</p>
       </a>
     </div>
-      <div class="col-4 text-center border-end">
+      <div class="col-4 text-center border">
 <a href="{{ url_for('form_automator') }}">
   <i class="fa fa-robot fa-4x"></i></i>
   <h3>Web form automator </h3>
