--- a/templates/pdf_to_excel.html
+++ b/templates/pdf_to_excel.html
@@ -2,16 +2,16 @@
 {% block content %}
 {% include "header.html" %}
 <div class="upload-container">
-    <form class="row justify-content-md-center" method="POST" enctype="multipart/form-data">
+    <form class="hstack" method="POST" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
-        <div class="col-auto">
-            {{ form.file_field.label }}
+        <div>
+            {{ form.file_field.label() }}
         </div>
-        <div class="col-auto">
+        <div>
             {{ form.file_field(class_="form-control") }}
         </div>
-        <div class="col-auto">
-            {{ form.submit(class_="btn btn-primary mb-2") }}
+        <div>
+            {{ form.submit(class_="btn btn-primary  mx-auto") }}
         </div>
     </form>
 </div>
