--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,5 +1,12 @@
 {% block content %}
 {% include "header.html" %}
+<div class="container">
+    <div class="row mt-5">
+        <div class="col-auto">
+            <h1 class="text-center">{{ message }}</h1>
+        </div>
+    </div>
+</div>
 <div class="upload-container">
     <form class="hstack" method="POST" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
