--- a/templates/header.html
+++ b/templates/header.html
@@ -17,7 +17,7 @@
         <h3>Blue Cell Pro</h3>
     </a>
     <div class="btn-group">
-
+    {% if current_user.is_authenticated %}
   <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
     Menu
   </button>
@@ -38,6 +38,13 @@
                 Logout
             </button>
         </a>
+        <a href="{{ url_for('registration_page') }}">
+            <button type="button" class="btn btn-primary">
+                Register
+            </button>
+        </a>
+        {% endif %}
+
 </div>
   </div>
 </nav>
